@@ -7,6 +7,7 @@
 * Cleanup Padrino::Application
 * Cleanup Gemfile generation
 * Cleanup Reloader
+* Cleanup Application Server
 * Improved Reloader
 * Decoupled Reloader, Loader, Application
 * Fixed Reloader in some extreme scenarios
